--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appropriate-images",
+  "name": "@mapbox/appropriate-images",
   "version": "0.1.0",
   "description": "Get appropriately sized images into your website.",
   "main": "index.js",
@@ -52,7 +52,6 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.0.0",
     "eslint-plugin-node": "^5.0.0",
-    "eslint-plugin-prettier": "^2.1.1",
     "husky": "^0.13.4",
     "jest": "^20.0.4",
     "lint-staged": "^3.6.1",
@@ -71,7 +70,7 @@
       "text",
       "html"
     ],
-    "resetMocks": true,
+    "clearMocks": true,
     "roots": [
       "./test"
     ],
