--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: node_js
 node_js:
   - 4
 before_install: if [[ `npm -v` != 5* ]]; then npm i -g npm@5; fi
+env:
+  - CXX=g++-5.7
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-5.7
