--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapbox/appropriate-images",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Get appropriately sized images into your website.",
   "main": "index.js",
   "scripts": {
@@ -59,7 +59,7 @@
     "prettier": "^1.4.4"
   },
   "lint-staged": {
-    "{,lib/**/,browser/**/,test/**/}*.js": [
+    "**/*.js": [
       "eslint",
       "prettier --single-quote --write",
       "git add"
@@ -72,10 +72,6 @@
       "text",
       "html"
     ],
-    "clearMocks": true,
-    "roots": [
-      "./test"
-    ],
-    "testRegex": ".*\\.test\\.js$"
+    "clearMocks": true
   }
 }
