--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "tempy": "^0.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "eslint": "^4.19.1",
     "eslint-plugin-node": "^5.2.1",
     "husky": "^0.14.1",
