--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Get appropriately sized images into your website.",
   "main": "index.js",
   "scripts": {
-    "precommit": "lint-staged",
-    "format": "prettier --single-quote --write '{,lib/**/,browser/**/,test/**/}*.js'",
+    "format": "prettier --write '{,lib/**/,browser/**/,test/**/}*.js'",
     "lint": "eslint .",
     "test-jest": "jest",
     "pretest": "npm run lint",
@@ -29,7 +28,7 @@
   },
   "homepage": "https://github.com/mapbox/appropriate-images#readme",
   "engines": {
-    "node": ">=4"
+    "node": ">=10"
   },
   "dependencies": {
     "chalk": "^1.1.3",
@@ -48,23 +47,29 @@
     "tempy": "^0.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
-    "eslint": "^4.19.1",
-    "eslint-plugin-node": "^5.2.1",
-    "husky": "^0.14.1",
-    "jest": "^24.9.0",
-    "lint-staged": "^4.3.0",
-    "prettier": "^1.16.4"
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@mapbox/prettier-config-docs": "^0.2.1",
+    "eslint": "^7.2.0",
+    "eslint-plugin-node": "^11.1.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.10",
+    "prettier": "^2.0.5"
   },
+  "prettier": "@mapbox/prettier-config-docs",
   "lint-staged": {
     "**/*.js": [
       "eslint",
-      "prettier --single-quote --write",
-      "git add"
+      "prettier --write"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "jest": {
     "coverageReporters": [
