--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "meow": "^9.0.0",
     "mkdirp": "^1.0.4",
     "p-finally": "^2.0.1",
+    "p-limit": "^3.1.0",
     "pify": "^5.0.0",
     "sharp": "^0.27.1",
     "tempy": "^1.0.0"
