--- a/package.json
+++ b/package.json
@@ -36,28 +36,29 @@
     "fasterror": "^1.1.0",
     "imagemin": "^7.0.1",
     "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-pngquant": "^9.0.0",
+    "imagemin-pngquant": "^9.0.1",
     "imagemin-webp": "^6.0.0",
-    "lodash": "^4.17.11",
-    "meow": "^7.0.1",
+    "lodash": "^4.17.20",
+    "meow": "^9.0.0",
     "mkdirp": "^1.0.4",
     "p-finally": "^2.0.1",
+    "p-limit": "^3.1.0",
     "pify": "^5.0.0",
     "sharp": "^0.25.4",
     "tempy": "^0.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@mapbox/prettier-config-docs": "^0.2.1",
-    "eslint": "^7.2.0",
+    "eslint": "^7.18.0",
     "eslint-plugin-node": "^11.1.0",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.10",
-    "prettier": "^2.0.5"
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1"
   },
   "prettier": "@mapbox/prettier-config-docs",
   "lint-staged": {
