--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapbox/appropriate-images",
-  "version": "4.1.0",
+  "version": "5.0.0-beta.0",
   "description": "Get appropriately sized images into your website.",
   "main": "index.js",
   "scripts": {
